[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Font/Large_font.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/Font/Normal_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/UI/Game_over.gd" type="Script" id=3]
[ext_resource path="res://UI/Theme/Ui_theme.tres" type="Theme" id=4]

[node name="Game_over" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game_over_overlay" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0156863, 0.0156863, 0.0156863, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="game_over" type="Label" parent="Game_over_overlay"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = 20.0
margin_right = 59.0
margin_bottom = 44.0
theme = ExtResource( 4 )
text = "Game Over"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_text" type="Label" parent="Game_over_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -36.528
margin_right = 45.0
margin_bottom = -3.52802
custom_fonts/font = ExtResource( 2 )
text = "Your score is:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_number" type="Label" parent="Game_over_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -16.5
margin_right = 45.0
margin_bottom = 16.5
custom_fonts/font = ExtResource( 1 )
text = "%s"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="Game_over_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 20.0
margin_right = 50.0
margin_bottom = 40.0
theme = ExtResource( 4 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_menu" type="Button" parent="Game_over_overlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = 47.5
margin_right = 50.0
margin_bottom = 67.5
theme = ExtResource( 4 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Game_over_overlay/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Game_over_overlay/Main_menu" to="." method="_on_Main_menu_pressed"]
